--- a/css/secret.css
+++ b/css/secret.css
@@ -2,7 +2,7 @@
 	border: none;
 	border-radius: 1rem;
 	margin: auto;
-	width: 50%;
+	width: calc(100% - 2rem);
 	padding: 2rem;
 	background-color: var(--background);
 }
@@ -38,5 +38,13 @@
 	}
 	100%{
 		transform: rotate(45deg);
+	}
+}
+
+
+@media (min-width: 487px){
+	.secret_message{
+		width: 50%;
+		max-width: 500px;
 	}
 }
